--- a/f434: 458 - The Decoder/readme
+++ b/f434: 458 - The Decoder/readme
@@ -1,4 +1,5 @@
 題目鏈接 ▶ https://zerojudge.tw/ShowProblem?problemid=f434
 有一題跟這個一模模一樣樣
 題目鏈接 ▶ https://zerojudge.tw/ShowProblem?problemid=a009
+我的解題記錄鏈接 ▶ https://github.com/CalvinWan0101/ZeroJudge-Basic/tree/master/a009-%E8%A7%A3%E7%A2%BC%E5%99%A8
 a[i] -= 7;
